--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -8,10 +8,10 @@
       %th Name
       %th Tl
       %th Ml
-    -#
-      %th
-      %th
-      %th
+      - if admin?
+        %th
+        %th
+        %th
   %tbody 
     - @tasks.each do |task|
       %tr
@@ -19,10 +19,9 @@
         %td= link_to task.name, task_path(task)
         %td= "#{task.tl} s"
         %td= "#{task.ml} MB"
-      -#
-        %td= task.contest
-        %td= link_to 'Show', task_path(task)
-        %td= link_to 'Edit', edit_task_path(task)
-        %td= link_to 'Destroy', task, :method => :delete, :data => { :confirm => 'Are you sure?' }
+        - if admin?
+          %td= link_to 'Edit', edit_task_path(task)
+          %td= link_to 'Inputs Edit', task_inputs_path(task)
+          %td= link_to 'Destroy', task, :method => :delete, :data => { :confirm => 'Are you sure?' }
   
 /= link_to 'New Task', new_contest_task_path
