--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,7 +29,11 @@
             %li{:class=>""}= link_to '自分の提出', my_contest_results_path(@contest)
 
           %ul.nav.navbar-nav.navbar-right
-            %li= current_user ? ( link_to current_user.username,'#' ) : ( link_to 'login',login_path )
+            - if logged_in?
+              %li= link_to current_user.username,'#'
+              %li= link_to 'logout',logout_path
+            - else
+              %li= link_to 'login',login_path
       - flash.each do |name, msg|
         = content_tag :div, msg, :id => "flash_#{name}"
       = content_tag :h1, yield(:title) if show_title?
